<resources>
    <string name="app_name">tipCalculator</string>
    <string name="input_the_cost">Input the cost</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_10">Good(10%)</string>
    <string name="ok_15">Ok(15%)</string>
    <string name="calculate">Calculate</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip amount</string>
</resources>